# FIFA

./: .gitignore  .pnp.js  .travis.yml  .yarnrc.yml  404.html  config.toml.example  config.yml  feature-1  get-started.html  hub.py  index.html  master-1  package  package-lock.json  package.json  pyproject.toml  util.py
.githhh/workflows/: pages.ymlbac
.github/workflows/: deploy-docs.yml  deploy.yml  pages.yml
assets/: 404.html-BvUPqEPH.js  app-A1s6GHTe.js  get-started.html-B1WbpFUZ.js  index.html-BGJWlad4.js
docs/: CNAME  README.md  _sidebar.md  index.html
docs/.vuepress/: config.js
docs/.vuepress/.temp/internal/: clientConfigs.js  routes.js  themeData.js
docs/.vuepress/.temp/pages/: 404.html.js  get-started.html.js  index.html.js
docs/.vuepress/.temp/pages/delta/: PATH.html.js  PATH.html.vue  index.html.js
docs/.vuepress/.temp/pages/lambda/: Alpha_nodejs.html.js  Alpha_nodejs.html.vue  Alpha_python.html.js  Alpha_python.html.vue  Alpha_shell.html.js  Alpha_shell.html.vue  Git_config.html.js  Git_config.html.vue  Git_guide.html.js  Git_guide.html.vue  Git_server.html.js  Stack.html.js  (+33 more)
docs/delta/Nightly/: _sidebar.md
docs/delta/SourceCodePro/: README.md
docs/delta/msys64_build/: README.md
docs/delta/msys64_build/root/: _sidebar.md
docs/delta/nginx/: README.md
docs/delta/nginx/vhosts.d/: _sidebar.md
docs/delta/ohmyzsh/: README.md
docs/delta/ubuntu-source/: README.md
docs/lambda/: Alpha_python.md  README.md  vim.md
docs/sigma/: _sidebar.md
docs/zeta/: _sidebar.md
docs/zh-cn/: README.md  _coverpage.md  _navbar.md  _sidebar.md  guide.md
(+46 files in other folders)
