[tool.poetry]
name = "fifa"
version = "0.1.0"
description = ""
authors = ["gaoming714 <gaoming714@126.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
pendulum = "^3.0.0"
tomlkit = "^0.12.5"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
